; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dbg_fw_funcs.c_ecore_dbg_reg_fifo_get_dump_buf_size.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dbg_fw_funcs.c_ecore_dbg_reg_fifo_get_dump_buf_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32 }
%struct.ecore_ptt = type { i32 }

@DBG_STATUS_OK = common dso_local global i32 0, align 4
@OSAL_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecore_dbg_reg_fifo_get_dump_buf_size(%struct.ecore_hwfn* %0, %struct.ecore_ptt* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ecore_hwfn*, align 8
  %6 = alloca %struct.ecore_ptt*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %5, align 8
  store %struct.ecore_ptt* %1, %struct.ecore_ptt** %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %5, align 8
  %10 = load %struct.ecore_ptt*, %struct.ecore_ptt** %6, align 8
  %11 = call i32 @ecore_dbg_dev_init(%struct.ecore_hwfn* %9, %struct.ecore_ptt* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i64*, i64** %7, align 8
  store i64 0, i64* %12, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @DBG_STATUS_OK, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %4, align 4
  br label %24

18:                                               ; preds = %3
  %19 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %5, align 8
  %20 = load %struct.ecore_ptt*, %struct.ecore_ptt** %6, align 8
  %21 = load i32, i32* @OSAL_NULL, align 4
  %22 = load i64*, i64** %7, align 8
  %23 = call i32 @ecore_reg_fifo_dump(%struct.ecore_hwfn* %19, %struct.ecore_ptt* %20, i32 %21, i32 0, i64* %22)
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %18, %16
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @ecore_dbg_dev_init(%struct.ecore_hwfn*, %struct.ecore_ptt*) #1

declare dso_local i32 @ecore_reg_fifo_dump(%struct.ecore_hwfn*, %struct.ecore_ptt*, i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
